--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -464,7 +464,10 @@ figcaption.mask{background-color:rgba(54, 55, 50, 0.79);color:#fff;padding:25px;
 .portfolio-item_1{cursor:pointer;list-style:none;overflow:hidden;position:relative;height:455px;}
 .fara{text-align:-webkit-center;min-height:460px !important;display:flex;justify-items:center;}
 .mask_1{background-image:url(img/siso.png);background-size:contain;bottom:-126px;color:#fff;padding:15px;position:absolute;width:102%;text-align:left;-webkit-transition:all 0.4s ease 0s;-moz-transition:all 0.4s ease 0s;-ms-transition:all 0.4s ease 0s;-o-transition:all 0.4s ease 0s;transition:all 0.4s ease 0s;height:100%;}
-.jgajjglsajgl{height:100%;-webkit-filter:grayscale(100%);-moz-filter:grayscale(100%);-ms-filter:grayscale(100%);-o-filter:grayscale(100%);filter:grayscale(100%);}
+.jgajjglsajgl{
+  height:100%;
+  
+}
 .ev1{margin:0;font-size:16px;font-family:'Open Sans', sans-serif;font-weight:400;color:white;padding-bottom:30px;word-break:break-word;}
 .ev2{font-size:14px;font-family:'Open Sans', sans-serif;font-weight:400;color:white;word-break:break-word;}
 .portfolio-item_1:hover .mask_1{bottom:0;}
